DateSelect: Finally fix datepicker z-index bug
The bug was not actually resolved with the previous fix. Needed to add the !important flag so that this class selector was recognised.

--- a/src/components/css/DateSelect.css
+++ b/src/components/css/DateSelect.css
@@ -7,7 +7,7 @@
 
 /* Override so that duration label text is behind datepicker overlay. */
 .react-datepicker-popper {
-  z-index: 2;
+  z-index: 2 !important;
 }
 
 header {
